Deploy cta btn gap fix

--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -175,6 +175,7 @@
     & > button {
       display: flex;
       background-color: #222222;
+      gap: 6px;
       padding: 14px 32px;
       color: var(--clr-white);
       border-radius: 10px;
